--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class ="debug"> </div>
+    <section class="debugMode">
+        <div class ="debug"> </div>
+        <label>debug</label>
+        <input type="checkbox" id="debugCheck"> 
+    </section>
+    
     <header>
         <p class="moleswhacked">Moles whacked: <b>0</b></p>
-        <p class="randomID"></p>
+        <p class="level"></p>
         <p class="timeleft">Time left: <b>60s</b></p>
     </header>
     <main>
