Adding timer class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <label>debug</label>
         <input type="checkbox" id="debugCheck"> 
     </section>
-    
+    <h1 class="timer"></h1>
     <header>
         <p class="moleswhacked">Moles whacked: <b>0</b></p>
         <p class="level"></p>
