--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <label>debug</label>
         <input type="checkbox" id="debugCheck"> 
     </section>
-    <h1 class="timer"></h1>
+
+    <h1 class="userName"></h1>
+    <p class="timer">timer</p>
     <header>
         <p class="moleswhacked">Moles whacked: <b>0</b></p>
         <p class="level"></p>
